--- a/app/modules/modules/chatviewers.html
+++ b/app/modules/modules/chatviewers.html
@@ -156,12 +156,12 @@
     <body>
         <div id="viewers"></div>
         <div class="title-bar">
-            <img class="title-icon" src="../../media/app_icon.png" />
-            Caffeinated
+            <img class="title-icon" src="https://assets.casterlabs.co/logo/casterlabs_icon.png" />
+            <span>Viewers Popout</span>
+            <a id="close" title="Close">
+                <ion-icon name="close"></ion-icon>
+            </a>
         </div>
-        <a id="close" title="Close">
-            <ion-icon name="close"></ion-icon>
-        </a>
         <div class="count">
             <ion-icon class="eyeicon" name="eye"></ion-icon>
             <span id="viewerCount">0</span>
