--- a/app/modules/modules/chatdisplay.html
+++ b/app/modules/modules/chatdisplay.html
@@ -150,6 +150,18 @@
                 -webkit-app-region: no-drag !important;
             }
 
+            #minimize {
+                cursor: pointer;
+                position: fixed;
+                right: 28px;
+                top: 6px;
+                -webkit-app-region: no-drag !important;
+            }
+
+            #minimize ion-icon {
+                -webkit-app-region: no-drag !important;
+            }
+
             /* Scrollbar */
 
             ::-webkit-scrollbar {
@@ -385,6 +397,9 @@
             <a id="close" title="Close">
                 <ion-icon name="close"></ion-icon>
             </a>
+            <a id="minimize" title="Minimize">
+                <ion-icon name="remove" style="--ionicon-stroke-width: 48px !important;"></ion-icon>
+            </a>
         </div>
     </body>
 
@@ -403,6 +418,10 @@
 
                 document.querySelector("#close").addEventListener("click", () => {
                     currentWindow.close();
+                });
+
+                document.querySelector("#minimize").addEventListener("click", () => {
+                    currentWindow.minimize();
                 });
 
                 messageInput.addEventListener("keyup", (e) => {
