--- a/app/index.html
+++ b/app/index.html
@@ -91,10 +91,10 @@
                 <ion-icon name="close"></ion-icon>
             </a>
             <a class="minmax" title="Maximize">
-                <ion-icon name="albums-outline"></ion-icon>
+                <ion-icon name="browsers-outline"></ion-icon>
             </a>
             <a class="minimize" title="Minimize">
-                <ion-icon name="remove"></ion-icon>
+                <ion-icon name="remove" style="--ionicon-stroke-width: 48px !important;"></ion-icon>
             </a>
         </div>
         <div id="content">
