--- a/app/modules/modules/chatdisplay.html
+++ b/app/modules/modules/chatdisplay.html
@@ -229,6 +229,8 @@
             #chatbox {
                 padding-top: 15px;
                 overflow-y: auto;
+                overflow-x: hidden;
+                overflow-wrap: break-word;
                 height: calc(100vh - 45px);
                 list-style: none;
             }
