--- a/app/credits.html
+++ b/app/credits.html
@@ -248,6 +248,13 @@
                     link: "https://socket.io/",
                     license_link: "https://github.com/socketio/socket.io/blob/master/LICENSE",
                     license_type: "MIT"
+                },
+                {
+                    name: "node-font-list",
+                    author: "oldj",
+                    link: "https://github.com/oldj/node-font-list/",
+                    license_link: "https://github.com/oldj/node-font-list/blob/master/LICENSE",
+                    license_type: "MIT"
                 }
             ];
 
