--- a/app/modules/modules/chatviewers.html
+++ b/app/modules/modules/chatviewers.html
@@ -219,7 +219,7 @@
                     const pfp = document.createElement("img");
                     const pfpLink = document.createElement("a");
 
-                    username.innerText = viewer.username;
+                    username.innerText = viewer.displayname;
                     username.classList = "username";
 
                     pfp.src = viewer.image_link;
