--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,7 @@
                             </div>
                         </a>
                         <a onclick="openLink(CAFFEINATED.userdata.streamer.link)">
-                            <img class="user-platform" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
+                            <img class="user-platform" onclick="UI.slap();" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
                         </a>
                         <p class="user-followers">
                             <span id="followers"></span>
