--- a/app/index.html
+++ b/app/index.html
@@ -253,9 +253,13 @@
     </body>
 
     <footer>
+        <script src="js/lang.js"></script>
+
+        <script src="lang/en.js"></script>
+        <script src="lang/fr.js"></script>
+
         <script src="js/util.js"></script>
         <script src="js/kinoko.js"></script>
-        <script src="js/lang.js"></script>
         <script src="js/currencies.js"></script>
         <script src="js/selectnsearch.js"></script>
         <script src="js/forms.js"></script>
