--- a/app/index.html
+++ b/app/index.html
@@ -143,10 +143,11 @@
                         <a onclick="openLink(CAFFEINATED.userdata.streamer.link)">
                             <img class="user-platform" onclick="UI.slap();" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
                         </a>
+                        <!-- 
                         <p class="user-followers">
                             <span id="followers"></span>
                         </p>
-                        <!-- <a class="user-settings" title="Settings" onclick="navigate('settings');">
+                        <a class="user-settings" title="Settings" onclick="navigate('settings');">
                         <ion-icon name="settings-outline"></ion-icon>
                     </a> -->
                     </div>
