Fix the funny business with the username thing.

--- a/app/index.html
+++ b/app/index.html
@@ -138,6 +138,7 @@
                             <img class="user-icon" src="media/icon.png" />
                             <div class="user-username">
                                 <ion-icon name="settings-outline"></ion-icon>
+                                <span class="user-username-text"></span>
                             </div>
                         </a>
                         <a onclick="openLink(CAFFEINATED.userdata.streamer.link)">
