Make the lower userbar text alternate between follower and subscriber counts.

--- a/app/index.html
+++ b/app/index.html
@@ -144,10 +144,10 @@
                         <a onclick="openLink(CAFFEINATED.userdata.streamer.link)">
                             <img class="user-platform" onclick="UI.slap();" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
                         </a>
-                        <!-- 
-                        <p class="user-followers">
-                            <span id="followers"></span>
+                        <p class="user-meta">
+                            <span id="user-meta-text"></span>
                         </p>
+                        <!-- 
                         <a class="user-settings" title="Settings" onclick="navigate('settings');">
                         <ion-icon name="settings-outline"></ion-icon>
                     </a> -->
